2009-03-29 17:32  rsbivand

	* ChangeLog, DESCRIPTION, inst/ChangeLog: drop=FALSE in reading
	  line and polygon shapefiles

2009-03-29 17:29  rsbivand

	* LICENSE, R/SpatialLines-methods.R, R/SpatialPolys-methods.R,
	  inst/LICENSE: drop=FALSE in reading line and polygon shapefiles

2009-03-17 21:43  vir

	* R/readSplus.R: Minor fix to allow for a line with NA's just
	  before the END.

2009-03-10 18:23  rsbivand

	* INDEX, LICENSE, inst/LICENSE, ChangeLog, inst/ChangeLog: data web
	  link

2009-02-18 12:58  rsbivand

	* inst/shapes/fylk-val-ll.dbf, inst/shapes/fylk-val-ll.shp,
	  inst/shapes/fylk-val-ll.shx, data/wrld_simpl.rda, ChangeLog,
	  inst/ChangeLog: kml writing; GSHHS lines shift

2009-02-18 12:55  rsbivand

	* ChangeLog, DESCRIPTION, INDEX, NAMESPACE, R/Rgshhs.R,
	  inst/ChangeLog, inst/LICENSE, inst/share/gshhs_c.b,
	  man/Rgshhs.Rd, R/getKMLcoordinates.R, R/kmlLine.R,
	  R/kmlPolygon.R, man/getKMLcoordinates.Rd, man/kmlLine.Rd,
	  man/kmlPolygon.Rd, man/wrld_simpl.Rd: kml writing; GSHHS lines
	  shift

2009-02-05 18:45  rsbivand

	* man/asciigrid.Rd: tidy

2009-02-05 16:38  rsbivand

	* R/readSplus.R, man/sp2WB.Rd, ChangeLog, inst/ChangeLog: adding
	  features to readSplus

2009-02-05 14:38  rsbivand

	* DESCRIPTION, NAMESPACE, R/readSplus.R, inst/share/Splus.map,
	  man/readSplus.Rd, ChangeLog, inst/ChangeLog: adding readSplus for
	  WinBUGS

2009-01-20 15:38  rsbivand

	* DESCRIPTION, R/sun-methods.R, ChangeLog, inst/ChangeLog: sun NULL
	  tz

2008-11-13 15:06  rsbivand

	* ChangeLog, DESCRIPTION, R/readGPS.R, inst/ChangeLog,
	  man/readGPS.Rd: ... for readGPS()

2008-11-12 15:55  rsbivand

	* DESCRIPTION, NAMESPACE, R/SP2owin.R, R/sp_spat1.R, R/spatstat1.R,
	  man/as.ppp.Rd, man/ppp.Rd: as.psp

2008-10-02 16:46  rsbivand

	* ChangeLog, inst/ChangeLog: changelog

2008-08-14 11:09  rsbivand

	* DESCRIPTION, INDEX, R/spmaps.R: NULL bug in maps2SP

2008-06-27 10:15  rsbivand

	* DESCRIPTION, NAMESPACE, R/SpatialLines-methods.R,